# boardproxy

./: .dir-locals.el  .gitignore  Makefile  README.md  board.cpp  board.hpp  boardproxy.cpp  boardproxy.files  boardproxy.includes  boardproxy.nix  boardproxy@.service  boardproxy@.socket  boards.cpp  boards.hpp  client.cpp  client.hpp  config.cpp  config.hpp  daemon.cpp  daemon.hpp  debug.hpp  default.nix  log.cpp  log.hpp  meson.build  meson_options.txt  protocol.hpp  proxy_factory.hpp  session.cpp  session.hpp  shell.nix  socket_proxy.cpp  socket_proxy.hpp  tcpproxy.cpp  tcpproxy.hpp  test.nix  unix_socket.cpp  unix_socket.hpp  util.hpp  version.cpp  (+3 more)
.github/workflows/: test.yml
configs/: psr-hw.toml  test.toml
src/: board.cpp  board.hpp  boardproxy.cpp  client.cpp  client.hpp  config.cpp  daemon.cpp  daemon.hpp  log.cpp  log.hpp  meson.build  protocol.hpp  session.cpp  session.hpp  socket_proxy.hpp  tcpproxy.cpp  unix_socket.cpp  version.hpp  wrproxy.cpp
tests/: Makefile  meson.build  test_boardproxy.py
